--- a/web-test/src/components/Footer.astro
+++ b/web-test/src/components/Footer.astro
@@ -1,5 +1,11 @@
-<p>
-  Copyright (c) 2013-2023 <u
-    ><a href="http://purdue.edu">Purdue University</a></u
-  >. All rights reserved.
-</p>
+<footer>
+  <div class="relative flex items-center py-5">
+    <div class="flex-grow border-t border-gray-400"></div>
+  </div>
+
+  <p>
+    Copyright (c) 2013-2023 <u
+      ><a href="http://purdue.edu">Purdue University</a></u
+    >. All rights reserved.
+  </p>
+</footer>
