--- a/web-test/src/components/Header.astro
+++ b/web-test/src/components/Header.astro
@@ -13,8 +13,10 @@ import NavButton from "./NavButton.astro";
   <NavButton href="/">Home</NavButton>
   <NavButton href="/team">Team</NavButton>
   <NavButton href="/documents">Documents</NavButton>
+  <NavButton href="/references">References</NavButton>
   <NavButton href="https://github.com/alanssitis/smart-air-hockey-table">
     Source
   </NavButton>
+  <NavButton href="/media">Media</NavButton>
   <NavButton href="/contact">Contact</NavButton>
 </ul>
