--- a/web-test/src/layouts/Layout.astro
+++ b/web-test/src/layouts/Layout.astro
@@ -13,16 +13,18 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="ECE 477 Group 5" />
+    <meta name="description" content="ECE 477 Team 5" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
-    <div class="max-w-6xl mx-auto my-10">
+    <div class="mx-5 my-10 xl:mx-auto xl:max-w-6xl">
       <Header />
-      <slot />
+      <div class="mb-12 mt-10">
+        <slot />
+      </div>
       <Footer />
     </div>
   </body>
