--- a/web-test/src/pages/contact.astro
+++ b/web-test/src/pages/contact.astro
@@ -2,4 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="ECE 477 Group 5 Contact">contact</Layout>
+<Layout title="ECE 477 Team 5 Contact">
+  <h1 class="text-4xl font-extrabold">Contact</h1>
+</Layout>
