--- a/web-test/src/pages/documents.astro
+++ b/web-test/src/pages/documents.astro
@@ -2,4 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="ECE 477 Group 5 Documents">document</Layout>
+<Layout title="ECE 477 Team 5 Documents">
+  <h1 class="text-4xl font-extrabold">Documents</h1>
+</Layout>
