--- a/web-test/src/pages/team/index.astro
+++ b/web-test/src/pages/team/index.astro
@@ -2,4 +2,6 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="ECE 477 Group 5 Team Members">team</Layout>
+<Layout title="ECE 477 Team 5 Members">
+  <h1 class="text-4xl font-extrabold">Members</h1>
+</Layout>
