finish team member page and added docs

--- a/web-test/src/components/Footer.astro
+++ b/web-test/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <div class="relative flex items-center py-5">
-    <div class="flex-grow border-t border-gray-400"></div>
+    <div class="flex-grow border-t border-neutral-400"></div>
   </div>
 
   <p>
