--- a/web-test/src/components/NavButton.astro
+++ b/web-test/src/components/NavButton.astro
@@ -11,9 +11,13 @@ const isCurrent = href === pathname || href === pathname.replace(/\/$/, "");
   <a
     class:list={[
       "block rounded border px-4 py-2 text-center",
-      "border-white text-blue-500 hover:border-gray-200 hover:bg-gray-200",
       {
-        "border-blue-500 bg-blue-500 text-white hover:bg-blue-700": isCurrent,
+        "border-white text-neutral-500 hover:border-neutral-200 hover:bg-neutral-200":
+          !isCurrent,
+      },
+      {
+        "border-neutral-500 bg-neutral-500 text-white hover:bg-neutral-700":
+          isCurrent,
       },
     ]}
     {href}><slot /></a
