--- a/web-test/src/layouts/Layout.astro
+++ b/web-test/src/layouts/Layout.astro
@@ -20,9 +20,11 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <div class="mx-5 my-10 xl:mx-auto xl:max-w-6xl">
+    <div
+      class="mx-5 my-10 flex min-h-screen flex-col antialiased xl:mx-auto xl:max-w-6xl"
+    >
       <Header />
-      <div class="mb-12 mt-10">
+      <div class="mb-12 mt-10 flex-grow">
         <slot />
       </div>
       <Footer />
