--- a/web-test/src/layouts/Layout.astro
+++ b/web-test/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <div
-      class="mx-5 my-10 flex min-h-screen flex-col antialiased xl:mx-auto xl:max-w-6xl"
+      class="mx-5 my-10 flex min-h-screen flex-col antialiased md:mx-12 xl:mx-auto xl:max-w-6xl"
     >
       <Header />
       <div class="mb-12 mt-10 flex-grow">
