--- a/web-test/src/pages/contact.astro
+++ b/web-test/src/pages/contact.astro
@@ -1,7 +1,15 @@
 ---
+import ContactEntry from "../components/ContactEntry.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="ECE 477 Team 5 Contact">
   <h1 class="text-4xl font-extrabold">Contact</h1>
+
+  <ul class="mx-40">
+    <ContactEntry name="Alan Chung Ma" email="achungma@purdue.edu" />
+    <ContactEntry name="William Dobert" email="wdobert@purdue.edu" />
+    <ContactEntry name="Trevor Moorman" email="tmoorma@purdue.edu" />
+    <ContactEntry name="Ben Owen" email="owen67@purdue.edu" />
+  </ul>
 </Layout>
