change settings to make it work on website
site and base settings modified to work on the website.

updated a few links

--- a/web/src/components/MemberEntry.astro
+++ b/web/src/components/MemberEntry.astro
@@ -10,7 +10,7 @@ interface Props {
 
 const { picture, name, role, uname } = Astro.props;
 
-const href = "/team/" + uname;
+const href = "/477grp5/team/" + uname;
 const email = uname + "@purdue.edu";
 ---
 
