--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -4,89 +4,89 @@ import Layout from "../layouts/Layout.astro";
 const reports = [
   {
     name: "A0 - Initial Project Proposal",
-    link: "/documents/A0 - Initial Project Proposal.docx",
+    link: "/477grp5/documents/A0 - Initial Project Proposal.docx",
   },
   {
     name: "A1 - Final Project Proposal",
-    link: "/documents/A1 - Final Project Proposal.docx",
+    link: "/477grp5/documents/A1 - Final Project Proposal.docx",
   },
   {
     name: "A2 - Functional Specification",
-    link: "/documents/A2 - Functional Specification.docx",
+    link: "/477grp5/documents/A2 - Functional Specification.docx",
   },
   {
     name: "A3 - Software Overview",
-    link: "/documents/A3 - Software Overview.docx",
+    link: "/477grp5/documents/A3 - Software Overview.docx",
   },
   {
     name: "A4 - Electrical Overview",
-    link: "/documents/A4 - Electrical Overview.docx",
+    link: "/477grp5/documents/A4 - Electrical Overview.docx",
   },
   {
     name: "A5 - Component Analysis",
-    link: "/documents/A5 - Component Analysis.docx",
+    link: "/477grp5/documents/A5 - Component Analysis.docx",
   },
   {
     name: "A6 - Mechanical Overviewr",
-    link: "/documents/A6 - Mechanical Overviewr.docx",
+    link: "/477grp5/documents/A6 - Mechanical Overviewr.docx",
   },
   {
     name: "A7 - Bill of Materials",
-    link: "/documents/A7 - Bill of Materials.docx",
+    link: "/477grp5/documents/A7 - Bill of Materials.docx",
   },
   {
     name: "A8 - Software Formalization",
-    link: "/documents/A8 - Software Formalization.docx",
+    link: "/477grp5/documents/A8 - Software Formalization.docx",
   },
   {
     name: "A9 - Legal and Regulatory Analysis",
-    link: "/documents/A9 - Legal and Regulatory Analysis.docx",
+    link: "/477grp5/documents/A9 - Legal and Regulatory Analysis.docx",
   },
   {
     name: "A10 - Reliability and Safety Analysis",
-    link: "/documents/A10 - Reliability and Safety Analysis.docx",
+    link: "/477grp5/documents/A10 - Reliability and Safety Analysis.docx",
   },
   {
     name: "A11 - Ethical and Environmental Analysis",
-    link: "/documents/A11 - Ethical and Environmental Analysis.docx",
+    link: "/477grp5/documents/A11 - Ethical and Environmental Analysis.docx",
   },
   {
     name: "A12 - User Manual",
-    link: "/documents/A12 - User Manual.docx",
+    link: "/477grp5/documents/A12 - User Manual.docx",
   },
   {
     name: "A13 - ABET Senior Design Report",
-    link: "/documents/A13 - ABET Senior Design Report.docx",
+    link: "/477grp5/documents/A13 - ABET Senior Design Report.docx",
   },
   {
     name: "A14 - Final Project Archive",
-    link: "/documents/A14 - Final Project Archive.docx",
+    link: "/477grp5/documents/A14 - Final Project Archive.docx",
   },
 ];
 const presentations = [
   {
     name: "Team 05 - Midterm Design Review Presentation",
-    link: "/documents/Team 05 - Midterm Design Review Presentation.pptx",
+    link: "/477grp5/documents/Team 05 - Midterm Design Review Presentation.pptx",
   },
   {
     name: "Team 05 - Final Presentation",
-    link: "/documents/Team 05 - Final Presentation.pptx",
+    link: "/477grp5/documents/Team 05 - Final Presentation.pptx",
   },
   {
     name: "Team 05 - Final Presentation Video",
-    link: "/documents/TODO",
+    link: "/477grp5/documents/TODO",
   },
 ];
 const schematics_pcb_layout = [
   {
     name: "Team 05 - Schematic and PCB Layout",
-    link: "/documents/TODO",
+    link: "/477grp5/documents/TODO",
   },
 ];
 const cad_design_files = [
   {
     name: "Team 05 - Project CAD Design Files",
-    link: "/documents/TODO",
+    link: "/477grp5/documents/TODO",
   },
 ];
 ---
