--- a/web/src/pages/references.astro
+++ b/web/src/pages/references.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 const references = [
   {
     name: "TODO",
-    link: "/references/TODO",
+    link: "/477grp5/references/TODO",
   },
 ];
 ---
