--- a/web/src/pages/team/index.astro
+++ b/web/src/pages/team/index.astro
@@ -7,7 +7,7 @@ import MemberEntry from "../../components/MemberEntry.astro";
   <h1 class="text-4xl font-extrabold">Members</h1>
   <ul class="mx-20 my-12 grid gap-6">
     <MemberEntry
-      picture="/team/alan.jpg"
+      picture="/477grp5/team/alan.jpg"
       name="Alan Chung Ma"
       role="Team Leader"
       uname="achungma"
@@ -18,7 +18,7 @@ import MemberEntry from "../../components/MemberEntry.astro";
       and attention to detail empowers those around him to achieve results.
     </MemberEntry>
     <MemberEntry
-      picture="/team/will.jpg"
+      picture="/477grp5/team/will.jpg"
       name="William Dobert"
       role="Software Engineer"
       uname="wdobert"
@@ -33,7 +33,7 @@ import MemberEntry from "../../components/MemberEntry.astro";
       device.
     </MemberEntry>
     <MemberEntry
-      picture="/team/trevor.jpg"
+      picture="/477grp5/team/trevor.jpg"
       name="Trevor Moorman"
       role="Systems Engineer"
       uname="tmoorma"
@@ -60,7 +60,7 @@ import MemberEntry from "../../components/MemberEntry.astro";
       games with friends.
     </MemberEntry>
     <MemberEntry
-      picture="/team/ben.jpg"
+      picture="/477grp5/team/ben.jpg"
       name="Ben Owen"
       role="Hardware Engineer"
       uname="owen67"
