--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -4,19 +4,19 @@ import NavButton from "./NavButton.astro";
 
 <div class="pb-6 text-center">
   <h2 class="text-4xl font-bold">
-    <a href="/">Digital Systems Senior Design</a>
+    <a href="/477grp5">Digital Systems Senior Design</a>
   </h2>
-  <h4 class="text-2xl"><a href="/">ECE477 Team 5</a></h4>
+  <h4 class="text-2xl"><a href="/477grp5">ECE477 Team 5</a></h4>
 </div>
 
 <ul class="flex">
-  <NavButton href="/">Home</NavButton>
-  <NavButton href="/team">Team</NavButton>
-  <NavButton href="/documents">Documents</NavButton>
-  <NavButton href="/references">References</NavButton>
+  <NavButton href="/477grp5">Home</NavButton>
+  <NavButton href="/477grp5/team">Team</NavButton>
+  <NavButton href="/477grp5/documents">Documents</NavButton>
+  <NavButton href="/477grp5/references">References</NavButton>
   <NavButton href="https://github.com/alanssitis/smart-air-hockey-table">
     Source
   </NavButton>
-  <NavButton href="/media">Media</NavButton>
-  <NavButton href="/contact">Contact</NavButton>
+  <NavButton href="/477grp5/media">Media</NavButton>
+  <NavButton href="/477grp5/contact">Contact</NavButton>
 </ul>
