make website mobile friendly

--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -9,7 +9,7 @@ import NavButton from "./NavButton.astro";
   <h4 class="text-2xl"><a href="/477grp5">ECE477 Team 5</a></h4>
 </div>
 
-<ul class="flex">
+<ul class="flex flex-col sm:flex-row">
   <NavButton href="/477grp5">Home</NavButton>
   <NavButton href="/477grp5/team">Team</NavButton>
   <NavButton href="/477grp5/documents">Documents</NavButton>
