--- a/web/src/pages/team/index.astro
+++ b/web/src/pages/team/index.astro
@@ -5,7 +5,7 @@ import MemberEntry from "../../components/MemberEntry.astro";
 
 <Layout title="ECE 477 Team 5 Members">
   <h1 class="text-4xl font-extrabold">Members</h1>
-  <ul class="mx-20 my-12 grid gap-6">
+  <ul class="sm:mx-20 my-12 grid gap-6">
     <MemberEntry
       picture="/477grp5/team/alan.jpg"
       name="Alan Chung Ma"
