change contact page margin

--- a/web/src/pages/contact.astro
+++ b/web/src/pages/contact.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="ECE 477 Team 5 Contact">
   <h1 class="text-4xl font-extrabold">Contact</h1>
 
-  <ul class="mx-40">
+  <ul class="mx-5 md:mx-40">
     <ContactEntry name="Alan Chung Ma" email="achungma@purdue.edu" />
     <ContactEntry name="William Dobert" email="wdobert@purdue.edu" />
     <ContactEntry name="Trevor Moorman" email="tmoorma@purdue.edu" />
