--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -4,7 +4,7 @@ import NavButton from "./NavButton.astro";
 
 <div class="pb-6 text-center">
   <h2 class="text-4xl font-bold">
-    <a href="/477grp5">Digital Systems Senior Design</a>
+    <a href="/ece477">Digital Systems Senior Design</a>
   </h2>
   <h4 class="text-2xl"><a href="/477grp5">ECE477 Team 5</a></h4>
 </div>
