updated references page
added three new references to the team website:
 - uC datasheet
 - uC reference manual
 - RGB LED datasheet

--- a/web/src/pages/references.astro
+++ b/web/src/pages/references.astro
@@ -3,8 +3,16 @@ import Layout from "../layouts/Layout.astro";
 
 const references = [
   {
-    name: "TODO",
-    link: "/477grp5/references/TODO",
+    name: "STM32F446xE (Microcontroller) Datasheet",
+    link: "/477grp5/references/STM32F446xE_Datasheet.pdf",
+  },
+  {
+    name: "STM32F446xx (Microcontroller) Reference Manual",
+    link: "/477grp5/references/STM32F446xx_Reference_Manual.pdf",
+  },
+  {
+    name: "WS2812B (RGB LED) Datasheet",
+    link: "/477grp5/references/WS2812B.pdf",
   },
 ];
 ---
