--- a/web/src/pages/references.astro
+++ b/web/src/pages/references.astro
@@ -14,6 +14,10 @@ const references = [
     name: "WS2812B (RGB LED) Datasheet",
     link: "/477grp5/references/WS2812B.pdf",
   },
+  {
+    name: "DRV5053 (Hall Effect Sensor) Datasheet",
+    link: "/477grp5/references/DRV5053.pdf",
+  },
 ];
 ---
 
