updated documents page with Puck body stl

--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -85,8 +85,8 @@ const schematics_pcb_layout = [
 ];
 const cad_design_files = [
   {
-    name: "Team 05 - Project CAD Design Files",
-    link: "/477grp5/documents/TODO",
+    name: "Puck Body STL",
+    link: "/477grp5/hardware/CAD/Puck/Puck-Body.stl",
   },
 ];
 ---
