Add A4 and A5 to documents

--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -18,14 +18,14 @@ const reports = [
     name: "A3 - Software Overview",
     link: "/477grp5/documents/A3 - Software Overview.docx",
   },
-  // {
-  //   name: "A4 - Electrical Overview",
-  //   link: "/477grp5/documents/A4 - Electrical Overview.docx",
-  // },
-  // {
-  //   name: "A5 - Component Analysis",
-  //   link: "/477grp5/documents/A5 - Component Analysis.docx",
-  // },
+  {
+    name: "A4 - Electrical Overview",
+    link: "/477grp5/documents/A4 - Electrical Overview.docx",
+  },
+  {
+    name: "A5 - Component Analysis",
+    link: "/477grp5/documents/A5 - Component Analysis.docx",
+  },
   // {
   //   name: "A6 - Mechanical Overviewr",
   //   link: "/477grp5/documents/A6 - Mechanical Overviewr.docx",
