--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -30,10 +30,10 @@ const reports = [
   //   name: "A6 - Mechanical Overviewr",
   //   link: "/477grp5/documents/A6 - Mechanical Overviewr.docx",
   // },
-  // {
-  //   name: "A7 - Bill of Materials",
-  //   link: "/477grp5/documents/A7 - Bill of Materials.docx",
-  // },
+  {
+    name: "A7 - Bill of Materials",
+    link: "/477grp5/documents/A7 - Bill of Materials.xlsx",
+  },
   // {
   //   name: "A8 - Software Formalization",
   //   link: "/477grp5/documents/A8 - Software Formalization.docx",
