Add A6 - Mechanical Overview

--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -26,10 +26,10 @@ const reports = [
     name: "A5 - Component Analysis",
     link: "/477grp5/documents/A5 - Component Analysis.docx",
   },
-  // {
-  //   name: "A6 - Mechanical Overviewr",
-  //   link: "/477grp5/documents/A6 - Mechanical Overviewr.docx",
-  // },
+  {
+    name: "A6 - Mechanical Overviewr",
+    link: "/477grp5/documents/A6 - Mechanical Overview.docx",
+  },
   {
     name: "A7 - Bill of Materials",
     link: "/477grp5/documents/A7 - Bill of Materials.xlsx",
