--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -34,10 +34,10 @@ const reports = [
     name: "A7 - Bill of Materials",
     link: "/477grp5/documents/A7 - Bill of Materials.xlsx",
   },
-  // {
-  //   name: "A8 - Software Formalization",
-  //   link: "/477grp5/documents/A8 - Software Formalization.docx",
-  // },
+  {
+    name: "A8 - Software Formalization",
+    link: "/477grp5/documents/A8 - Software Formalization.docx",
+  },
   // {
   //   name: "A9 - Legal and Regulatory Analysis",
   //   link: "/477grp5/documents/A9 - Legal and Regulatory Analysis.docx",
