--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -27,7 +27,7 @@ const reports = [
     link: "/477grp5/documents/A5 - Component Analysis.docx",
   },
   {
-    name: "A6 - Mechanical Overviewr",
+    name: "A6 - Mechanical Overview",
     link: "/477grp5/documents/A6 - Mechanical Overview.docx",
   },
   {
