--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -78,10 +78,22 @@ const presentations = [
   // },
 ];
 const schematics_pcb_layout = [
-  // {
-  //   name: "Team 05 - Schematic and PCB Layout",
-  //   link: "/477grp5/documents/TODO",
-  // },
+  {
+    name: "Team 05 - Master PCB Schematic & Layout (KiCad project files)",
+    link: "/477grp5/documents/master_pcb_kicad.zip",
+  },
+  {
+    name: "Team 05 - Master PCB Production Files (Gerbers)",
+    link: "/477grp5/documents/master_pcb_gerbers.zip",
+  },
+  {
+    name: "Team 05 - Sensor PCB Schematic & Layout (KiCad project files)",
+    link: "/477grp5/documents/sensor_pcb_kicad.zip",
+  },
+  {
+    name: "Team 05 - Sensor PCB Production Files (Gerbers)",
+    link: "/477grp5/documents/sensor_pcb_gerbers.zip",
+  },
 ];
 const cad_design_files = [
   {
