Add encoder and OLED controller datasheets

--- a/web/src/pages/references.astro
+++ b/web/src/pages/references.astro
@@ -34,6 +34,14 @@ const references = [
     name: "CDx4HC11 (Triple 3-input AND Gate) Datasheet",
     link: "/477grp5/references/CDx4HC11_AND_Gate_Datasheet.pdf",
   },
+  {
+    name: "SSD1309 (OLED controller IC) Datasheet",
+    link: "/477grp5/references/SSD1309_OLED_Controller_Datasheet.pdf",
+  },
+  {
+    name: "PEC09 (Rotary Encoder) Datasheet",
+    link: "/477grp5/references/PEC09_Encoder_Datasheet.pdf",
+  },
 ];
 ---
 
