add updated table cad files
added air hockey table cad and f3d files

--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -100,6 +100,14 @@ const cad_design_files = [
     name: "Puck Body STL",
     link: "/477grp5/hardware/CAD/Puck/Puck-Body.stl",
   },
+  {
+    name: "Table STL",
+    link: "/477grp5/hardware/CAD/Table/Built+to+size.stl",
+  },
+  {
+    name: "Table F3D",
+    link: "/477grp5/hardware/CAD/Table/Built+to+size.f3d",
+  },
 ];
 ---
 
