Add ESD protection IC datasheets

--- a/web/src/pages/references.astro
+++ b/web/src/pages/references.astro
@@ -42,6 +42,14 @@ const references = [
     name: "PEC09 (Rotary Encoder) Datasheet",
     link: "/477grp5/references/PEC09_Encoder_Datasheet.pdf",
   },
+  {
+    name: "USBLC6-2 (2-signal ESD Protection IC) Datasheet",
+    link: "/477grp5/references/USBLC6-2_ESD_Protection_Datasheet.pdf",
+  },
+  {
+    name: "USBLC6-4 (4-signal ESD Protection IC) Datasheet",
+    link: "/477grp5/references/USBLC6-4_ESD_Protection_Datasheet.pdf",
+  },
 ];
 ---
 
