--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -64,10 +64,10 @@ const reports = [
   // },
 ];
 const presentations = [
-  // {
-  //   name: "Team 05 - Midterm Design Review Presentation",
-  //   link: "/477grp5/documents/Team 05 - Midterm Design Review Presentation.pptx",
-  // },
+  {
+    name: "Team 05 - Midterm Design Review Presentation",
+    link: "/477grp5/documents/Team 05 - Midterm Design Review Presentation.pptx",
+  },
   // {
   //   name: "Team 05 - Final Presentation",
   //   link: "/477grp5/documents/Team 05 - Final Presentation.pptx",
