Shortened about me

--- a/web/src/pages/team/index.astro
+++ b/web/src/pages/team/index.astro
@@ -46,18 +46,7 @@ import MemberEntry from "../../components/MemberEntry.astro";
       he also hosted recitations for ECE 368. From May to August of 2023, Trevor
       got the opportunity to work as a Firmware Engineer Intern at Indesign,
       LLC. Indesign is a computer and electrical engineering consultancy firm
-      located in Lawrence, Indiana. During his internship, Trevor got the
-      opportunity to work on several projects. These projects primarily involved
-      developing firmware in C, although one included a companion PC application
-      developed using JavaScript with the Electron framework. Projects involved
-      microcontrollers from both Microchip Technology and STMicroelectronics.
-      This internship served as a great opportunity to both utilize what he had
-      learned and gain practical work experience. Outside of school and work,
-      his main hobbies are biking, lacrosse, and video games. In high school,
-      Trevor began playing lacrosse as a midfielder, but later transitioned into
-      defense. He primarily plays strategy games, with his favorites being
-      Civilization V and Factorio. However, he now mostly plays multiplayer
-      games with friends.
+      located in Lawrence, Indiana.
     </MemberEntry>
     <MemberEntry
       picture="/477grp5/team/ben.jpg"
