--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -38,10 +38,10 @@ const reports = [
     name: "A8 - Software Formalization",
     link: "/477grp5/documents/A8 - Software Formalization.docx",
   },
-  // {
-  //   name: "A9 - Legal and Regulatory Analysis",
-  //   link: "/477grp5/documents/A9 - Legal and Regulatory Analysis.docx",
-  // },
+  {
+    name: "A9 - Legal and Regulatory Analysis",
+    link: "/477grp5/documents/A9 - Legal and Regulatory Analysis.docx",
+  },
   // {
   //   name: "A10 - Reliability and Safety Analysis",
   //   link: "/477grp5/documents/A10 - Reliability and Safety Analysis.docx",
