--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -42,10 +42,10 @@ const reports = [
     name: "A9 - Legal and Regulatory Analysis",
     link: "/477grp5/documents/A9 - Legal and Regulatory Analysis.docx",
   },
-  // {
-  //   name: "A10 - Reliability and Safety Analysis",
-  //   link: "/477grp5/documents/A10 - Reliability and Safety Analysis.docx",
-  // },
+  {
+    name: "A10 - Reliability and Safety Analysis",
+    link: "/477grp5/documents/A10 - Reliability and Safety Analysis.docx",
+  },
   // {
   //   name: "A11 - Ethical and Environmental Analysis",
   //   link: "/477grp5/documents/A11 - Ethical and Environmental Analysis.docx",
