--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -46,10 +46,10 @@ const reports = [
     name: "A10 - Reliability and Safety Analysis",
     link: "/477grp5/documents/A10 - Reliability and Safety Analysis.docx",
   },
-  // {
-  //   name: "A11 - Ethical and Environmental Analysis",
-  //   link: "/477grp5/documents/A11 - Ethical and Environmental Analysis.docx",
-  // },
+  {
+    name: "A11 - Ethical and Environmental Analysis",
+    link: "/477grp5/documents/A11 - Ethical and Environmental Analysis.docx",
+  },
   // {
   //   name: "A12 - User Manual",
   //   link: "/477grp5/documents/A12 - User Manual.docx",
