--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -50,10 +50,10 @@ const reports = [
     name: "A11 - Ethical and Environmental Analysis",
     link: "/477grp5/documents/A11 - Ethical and Environmental Analysis.docx",
   },
-  // {
-  //   name: "A12 - User Manual",
-  //   link: "/477grp5/documents/A12 - User Manual.docx",
-  // },
+  {
+    name: "A12 - User Manual",
+    link: "/477grp5/documents/A12 - User Manual.docx",
+  },
   // {
   //   name: "A13 - ABET Senior Design Report",
   //   link: "/477grp5/documents/A13 - ABET Senior Design Report.docx",
