--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -108,6 +108,38 @@ const cad_design_files = [
     name: "Table F3D",
     link: "/477grp5/hardware/CAD/Table/Built+to+size.f3d",
   },
+  {
+    name: "Goal Chute STL",
+    link: "/477grp5/hardware/CAD/Goal_Chute/Goal_Chute.stl",
+  },
+  {
+    name: "Goal Chute F3D",
+    link: "/477grp5/hardware/CAD/Goal_Chute/Goal_Chute.f3d",
+  },
+  {
+    name: "Pusher STL",
+    link: "/477grp5/hardware/CAD/Pusher/Pusher.stl",
+  },
+  {
+    name: "Pusher F3D",
+    link: "/477grp5/hardware/CAD/Pusher/Pusher.f3d",
+  },
+  {
+    name: "PCB Mounting STL",
+    link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.stl",
+  },
+  {
+    name: "PCB Mounting F3D",
+    link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.f3d",
+  },
+  {
+    name: "PSU Mounting STL",
+    link: "/477grp5/hardware/CAD/PSU_Mounting/PSU_Mounting.stl",
+  },
+  {
+    name: "PSU Mounting F3D",
+    link: "/477grp5/hardware/CAD/PSU_Mounting/PSU_Mounting.f3d",
+  },
 ];
 ---
 
