Add final presentation documents

--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -68,14 +68,14 @@ const presentations = [
     name: "Team 05 - Midterm Design Review Presentation",
     link: "/477grp5/documents/Team 05 - Midterm Design Review Presentation.pptx",
   },
-  // {
-  //   name: "Team 05 - Final Presentation",
-  //   link: "/477grp5/documents/Team 05 - Final Presentation.pptx",
-  // },
-  // {
-  //   name: "Team 05 - Final Presentation Video",
-  //   link: "/477grp5/documents/TODO",
-  // },
+  {
+    name: "Team 05 - Final Presentation",
+    link: "/477grp5/documents/Team 05 - Final Presentation.pptx",
+  },
+  {
+    name: "Team 05 - Final Presentation Video",
+    link: "/477grp5/documents/Team 05 - Final Presentation Video.mp4",
+  },
 ];
 const schematics_pcb_layout = [
   {
