--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -125,6 +125,14 @@ const cad_design_files = [
     link: "/477grp5/hardware/CAD/Pusher/Pusher.f3d",
   },
   {
+    name: "Knob STL",
+    link: "/477grp5/hardware/CAD/Knob/Knob.stl",
+  },
+  {
+    name: "Knob F3D",
+    link: "/477grp5/hardware/CAD/Knob/Knob.f3d",
+  },
+  {
     name: "PCB Mounting STL",
     link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.stl",
   },
