Restore softlink to hardware folder, add 5 more CAD models, fix documents page

--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -98,7 +98,7 @@ const schematics_pcb_layout = [
 const cad_design_files = [
   {
     name: "Puck Body STL",
-    link: "/477grp5/hardware/CAD/Puck/Puck-Body.stl",
+    link: "/477grp5/hardware/CAD/Puck/Puck-SingleMagnet-Body.stl",
   },
   {
     name: "Table STL",
@@ -107,6 +107,46 @@ const cad_design_files = [
   {
     name: "Table F3D",
     link: "/477grp5/hardware/CAD/Table/Built+to+size.f3d",
+  },
+  {
+    name: "Goal Chute STL",
+    link: "/477grp5/hardware/CAD/Goal_Chute/Goal_Chute.stl",
+  },
+  {
+    name: "Goal Chute F3D",
+    link: "/477grp5/hardware/CAD/Goal_Chute/Goal_Chute.f3d",
+  },
+  {
+    name: "Pusher STL",
+    link: "/477grp5/hardware/CAD/Pusher/Pusher.stl",
+  },
+  {
+    name: "Pusher F3D",
+    link: "/477grp5/hardware/CAD/Pusher/Pusher.f3d",
+  },
+  {
+    name: "Knob STL",
+    link: "/477grp5/hardware/CAD/Knob/Knob.stl",
+  },
+  {
+    name: "Knob F3D",
+    link: "/477grp5/hardware/CAD/Knob/Knob.f3d",
+  },
+  {
+    name: "PCB Mounting STL",
+    link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.stl",
+  },
+  {
+    name: "PCB Mounting F3D",
+    link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.f3d",
+  },
+  {
+    name: "PSU Mounting STL",
+    link: "/477grp5/hardware/CAD/PSU_Mounting/PSU_Mounting.stl",
+  },
+  {
+    name: "PSU Mounting F3D",
+    link: "/477grp5/hardware/CAD/PSU_Mounting/PSU_Mounting.f3d",
   },
 ];
 ---
