--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -54,14 +54,14 @@ const reports = [
     name: "A12 - User Manual",
     link: "/477grp5/documents/A12 - User Manual.docx",
   },
-  // {
-  //   name: "A13 - ABET Senior Design Report",
-  //   link: "/477grp5/documents/A13 - ABET Senior Design Report.docx",
-  // },
-  // {
-  //   name: "A14 - Final Project Archive",
-  //   link: "/477grp5/documents/A14 - Final Project Archive.docx",
-  // },
+  {
+    name: "A13 - ABET Senior Design Report",
+    link: "/477grp5/documents/A13 - ABET Senior Design Report.docx",
+  },
+  {
+    name: "A14 - Final Project Archive",
+    link: "/477grp5/documents/A14 - Final Project Archive.zip",
+  },
 ];
 const presentations = [
   {
