--- a/web/src/pages/documents.astro
+++ b/web/src/pages/documents.astro
@@ -4,149 +4,149 @@ import Layout from "../layouts/Layout.astro";
 const reports = [
   {
     name: "A0 - Initial Project Proposal",
-    link: "/477grp5/documents/A0 - Initial Project Proposal.docx",
+    link: "/documents/A0 - Initial Project Proposal.docx",
   },
   {
     name: "A1 - Final Project Proposal",
-    link: "/477grp5/documents/A1 - Final Project Proposal.docx",
+    link: "/documents/A1 - Final Project Proposal.docx",
   },
   {
     name: "A2 - Functional Specification",
-    link: "/477grp5/documents/A2 - Functional Specification.docx",
+    link: "/documents/A2 - Functional Specification.docx",
   },
   {
     name: "A3 - Software Overview",
-    link: "/477grp5/documents/A3 - Software Overview.docx",
+    link: "/documents/A3 - Software Overview.docx",
   },
   {
     name: "A4 - Electrical Overview",
-    link: "/477grp5/documents/A4 - Electrical Overview.docx",
+    link: "/documents/A4 - Electrical Overview.docx",
   },
   {
     name: "A5 - Component Analysis",
-    link: "/477grp5/documents/A5 - Component Analysis.docx",
+    link: "/documents/A5 - Component Analysis.docx",
   },
   {
     name: "A6 - Mechanical Overview",
-    link: "/477grp5/documents/A6 - Mechanical Overview.docx",
+    link: "/documents/A6 - Mechanical Overview.docx",
   },
   {
     name: "A7 - Bill of Materials",
-    link: "/477grp5/documents/A7 - Bill of Materials.xlsx",
+    link: "/documents/A7 - Bill of Materials.xlsx",
   },
   {
     name: "A8 - Software Formalization",
-    link: "/477grp5/documents/A8 - Software Formalization.docx",
+    link: "/documents/A8 - Software Formalization.docx",
   },
   {
     name: "A9 - Legal and Regulatory Analysis",
-    link: "/477grp5/documents/A9 - Legal and Regulatory Analysis.docx",
+    link: "/documents/A9 - Legal and Regulatory Analysis.docx",
   },
   {
     name: "A10 - Reliability and Safety Analysis",
-    link: "/477grp5/documents/A10 - Reliability and Safety Analysis.docx",
+    link: "/documents/A10 - Reliability and Safety Analysis.docx",
   },
   {
     name: "A11 - Ethical and Environmental Analysis",
-    link: "/477grp5/documents/A11 - Ethical and Environmental Analysis.docx",
+    link: "/documents/A11 - Ethical and Environmental Analysis.docx",
   },
   {
     name: "A12 - User Manual",
-    link: "/477grp5/documents/A12 - User Manual.docx",
+    link: "/documents/A12 - User Manual.docx",
   },
   {
     name: "A13 - ABET Senior Design Report",
-    link: "/477grp5/documents/A13 - ABET Senior Design Report.docx",
+    link: "/documents/A13 - ABET Senior Design Report.docx",
   },
   {
     name: "A14 - Final Project Archive",
-    link: "/477grp5/documents/A14 - Final Project Archive.zip",
+    link: "/documents/A14 - Final Project Archive.zip",
   },
 ];
 const presentations = [
   {
     name: "Team 05 - Midterm Design Review Presentation",
-    link: "/477grp5/documents/Team 05 - Midterm Design Review Presentation.pptx",
+    link: "/documents/Team 05 - Midterm Design Review Presentation.pptx",
   },
   {
     name: "Team 05 - Final Presentation",
-    link: "/477grp5/documents/Team 05 - Final Presentation.pptx",
+    link: "/documents/Team 05 - Final Presentation.pptx",
   },
   {
     name: "Team 05 - Final Presentation Video",
-    link: "/477grp5/documents/Team 05 - Final Presentation Video.mp4",
+    link: "/documents/Team 05 - Final Presentation Video.mp4",
   },
 ];
 const schematics_pcb_layout = [
   {
     name: "Team 05 - Master PCB Schematic & Layout (KiCad project files)",
-    link: "/477grp5/documents/master_pcb_kicad.zip",
+    link: "/documents/master_pcb_kicad.zip",
   },
   {
     name: "Team 05 - Master PCB Production Files (Gerbers)",
-    link: "/477grp5/documents/master_pcb_gerbers.zip",
+    link: "/documents/master_pcb_gerbers.zip",
   },
   {
     name: "Team 05 - Sensor PCB Schematic & Layout (KiCad project files)",
-    link: "/477grp5/documents/sensor_pcb_kicad.zip",
+    link: "/documents/sensor_pcb_kicad.zip",
   },
   {
     name: "Team 05 - Sensor PCB Production Files (Gerbers)",
-    link: "/477grp5/documents/sensor_pcb_gerbers.zip",
+    link: "/documents/sensor_pcb_gerbers.zip",
   },
 ];
 const cad_design_files = [
   {
     name: "Puck Body STL",
-    link: "/477grp5/hardware/CAD/Puck/Puck-SingleMagnet-Body.stl",
+    link: "/hardware/CAD/Puck/Puck-SingleMagnet-Body.stl",
   },
   {
     name: "Table STL",
-    link: "/477grp5/hardware/CAD/Table/Built+to+size.stl",
+    link: "/hardware/CAD/Table/Built+to+size.stl",
   },
   {
     name: "Table F3D",
-    link: "/477grp5/hardware/CAD/Table/Built+to+size.f3d",
+    link: "/hardware/CAD/Table/Built+to+size.f3d",
   },
   {
     name: "Goal Chute STL",
-    link: "/477grp5/hardware/CAD/Goal_Chute/Goal_Chute.stl",
+    link: "/hardware/CAD/Goal_Chute/Goal_Chute.stl",
   },
   {
     name: "Goal Chute F3D",
-    link: "/477grp5/hardware/CAD/Goal_Chute/Goal_Chute.f3d",
+    link: "/hardware/CAD/Goal_Chute/Goal_Chute.f3d",
   },
   {
     name: "Pusher STL",
-    link: "/477grp5/hardware/CAD/Pusher/Pusher.stl",
+    link: "/hardware/CAD/Pusher/Pusher.stl",
   },
   {
     name: "Pusher F3D",
-    link: "/477grp5/hardware/CAD/Pusher/Pusher.f3d",
+    link: "/hardware/CAD/Pusher/Pusher.f3d",
   },
   {
     name: "Knob STL",
-    link: "/477grp5/hardware/CAD/Knob/Knob.stl",
+    link: "/hardware/CAD/Knob/Knob.stl",
   },
   {
     name: "Knob F3D",
-    link: "/477grp5/hardware/CAD/Knob/Knob.f3d",
+    link: "/hardware/CAD/Knob/Knob.f3d",
   },
   {
     name: "PCB Mounting STL",
-    link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.stl",
+    link: "/hardware/CAD/PCB_Mounting/PCB_Mounting.stl",
   },
   {
     name: "PCB Mounting F3D",
-    link: "/477grp5/hardware/CAD/PCB_Mounting/PCB_Mounting.f3d",
+    link: "/hardware/CAD/PCB_Mounting/PCB_Mounting.f3d",
   },
   {
     name: "PSU Mounting STL",
-    link: "/477grp5/hardware/CAD/PSU_Mounting/PSU_Mounting.stl",
+    link: "/hardware/CAD/PSU_Mounting/PSU_Mounting.stl",
   },
   {
     name: "PSU Mounting F3D",
-    link: "/477grp5/hardware/CAD/PSU_Mounting/PSU_Mounting.f3d",
+    link: "/hardware/CAD/PSU_Mounting/PSU_Mounting.f3d",
   },
 ];
 ---
