--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="ECE 477 Team 5" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/477grp5/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
