change footer to trigger deployment

--- a/web/src/components/Footer.astro
+++ b/web/src/components/Footer.astro
@@ -6,6 +6,6 @@
   <p>
     Copyright (c) 2013-2023 <u
       ><a href="http://purdue.edu">Purdue University</a></u
-    >. All rights reserved.
+    > and the members of the team. All rights reserved.
   </p>
 </footer>
