--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -6,7 +6,7 @@ import NavButton from "./NavButton.astro";
   <h2 class="text-4xl font-bold">
     <a href="/">Puck-It</a>
   </h2>
-  <h4 class="text-2xl"><a href="/">ECE477 Team 5</a></h4>
+  <h4 class="text-2xl"><a href="/">ECE477 Digital Systems Senior Design Team 5</a></h4>
 </div>
 
 <ul class="flex flex-col sm:flex-row">
